@@ -1,8 +1,9 @@
 ppvm (0.1.1) UNRELEASED; urgency=low
 
   * Fix a typo in the manual page.
+  * Fix integer overflow when rounding numbers up to the unit size.
 
- -- Jakub Wilk <jwilk@jwilk.net>  Sun, 01 Feb 2015 17:45:01 +0100
+ -- Jakub Wilk <jwilk@jwilk.net>  Sun, 01 Feb 2015 17:57:37 +0100
 
 ppvm (0.1) unstable; urgency=low
 
